test_programs/compile_failure/noirc_frontend_tests_struct_numeric_generic_in_struct/src/main.nr
pub struct Foo {
    inner: u64,
}

pub struct Bar<let N: Foo> {}
